Fixed distorted sidebar images

--- a/src/components/productPage/imageGallery/ImageGallery.module.scss
+++ b/src/components/productPage/imageGallery/ImageGallery.module.scss
@@ -10,11 +10,20 @@
     max-height: 560px;
   }
 
-  .galleryImage {
-    width: 70px;
-    height: 70px;
-    margin-bottom: 10px;
-    cursor: pointer;
+  .sidebarContainer {
+    display: flex;
+    justify-content: center;
+    width: 80px;
+    height: 80px;
+    max-height: 560px;
+    overflow: hidden;
+    margin: 0 10px 10px 0;
+
+    .galleryImage {
+      max-width: 100%;
+      max-height: 100%;
+      cursor: pointer;
+    }
   }
 }
 
